<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity">

    <item
        android:id="@+id/most_popular_movies_menu_item"
        android:orderInCategory="1"
        android:title="@string/most_popular_movies_menu_label"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/top_rated_movies_menu_iten"
        android:orderInCategory="2"
        android:title="@string/top_rated_movies_menu_label"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/favourite_movies_menu_item"
        android:orderInCategory="3"
        android:title="@string/favourite_movies_menu_label"
        app:showAsAction="ifRoom" />

</menu>