<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/review_item_author_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:text="@string/author_label"
        android:textSize="@dimen/review_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/review_item_author_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:textSize="@dimen/review_text_size"
        app:layout_constraintStart_toEndOf="@id/review_item_author_label_tv"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/author" />

    <TextView
        android:id="@+id/review_item_review_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/review_text_size"
        android:layout_margin="@dimen/margin_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/review_item_author_tv"
        tools:text="@string/sample_movie_overview" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/margin_default"
        app:layout_constraintTop_toBottomOf="@+id/review_item_review_tv"/>

</androidx.constraintlayout.widget.ConstraintLayout>
